Update Portfolio and Tools/Tech

--- a/wp-content/themes/filip/react-src/src/App.scss
+++ b/wp-content/themes/filip/react-src/src/App.scss
@@ -1,3 +1,4 @@
 @import './sass/materialize/_index.scss';
 @import './sass/general/_index.scss';
 @import './sass/shared/_index.scss';
+@import './sass/sections/_index.scss';
