--- a/wp-content/themes/filip/react-src/src/sass/sections/_portfolio.scss
+++ b/wp-content/themes/filip/react-src/src/sass/sections/_portfolio.scss
@@ -3,8 +3,21 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  background-image: url("/wp-content/uploads/2018/12/tlo-11.png");
+  background-image: url("/wp-content/uploads/2018/12/tlo-10.png");
   .btn {
     margin:5px;
+  }
+  .card {
+    .card-image img {
+      opacity: 0.7;
+      &:hover {
+        opacity: 1;
+      }
+    }
+    .card-reveal {
+      .btn-small {
+        cursor: default;
+      }
+    }
   }
 }
